post processing modifs

--- a/example-twobeads.ipynb
+++ b/example-twobeads.ipynb
@@ -26,6 +26,15 @@
  "cells": [
   {
    "source": [
+    "# Two beads on a string\n",
+    "\n",
+    "Nous allons dans cet exemple procéder à la démonstration la plus complète de la librairie `quantum-string`"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "On commence par importer les librairies pertinentes"
    ],
    "cell_type": "markdown",
@@ -90,7 +99,7 @@
     "\n",
     "celerity = np.sqrt(tension/density)\n",
     "\n",
-    "dx = length/space_steps\n",
+    "dx = length/(space_steps - 1)\n",
     "dt = dx/celerity\n",
     "time_steps = int(duration/dt)"
    ]
