--- a/example-twobeads.ipynb
+++ b/example-twobeads.ipynb
@@ -160,11 +160,11 @@
    "source": [
     "pos_a = 0.4\n",
     "cell_a = int(pos_a*space_steps)\n",
-    "particle_a = Particle(cell_a, 0.0, 0.01, 2*np.pi, True, space_steps)\n",
+    "particle_a = Particle(cell_a, 0.0, 0.01, 2*np.pi, True, space_steps, color=(0, 0, 255))\n",
     "\n",
     "pos_b = 0.6\n",
     "cell_b = int(pos_b*space_steps)\n",
-    "particle_b = Particle(cell_b, 0.0, 0.02, 2*np.pi, True, space_steps)\n",
+    "particle_b = Particle(cell_b, 0.0, 0.02, 2*np.pi, True, space_steps, color=(255, 0, 0))\n",
     "\n",
     "particles = Particles(particle_a, particle_b)"
    ]
