--- a/example.ipynb
+++ b/example.ipynb
@@ -46,9 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import Simulation\n",
-    "from particle import Particle, Particles\n",
-    "from edge import ExcitatorSin, MirrorEdge\n",
+    "from quantumstring.simulation import Simulation\n",
+    "from quantumstring.particle import Particle, Particles\n",
+    "from quantumstring.edge import ExcitatorSin, MirrorEdge\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -99,16 +99,16 @@
     "\n",
     "celerity = np.sqrt(tension/density)\n",
     "\n",
-    "dx = length/(space_steps - 1)\n",
+    "dx = length/space_steps\n",
     "dt = dx/celerity\n",
     "time_steps = int(duration/dt)"
    ]
   },
   {
    "source": [
-    "On définit le champ initial et la vitesse initial de la corde. On la représente par une liste où chaque élément correspond à la valeur du champ en la cellule considérée.\n",
+    "On définit les deux instants initiaux de la corde. On la représente par une liste où chaque élément correspond à la valeur du champ en la cellule considérée.\n",
     "\n",
-    "Ici on choisit un champ nul ainsi qu'une dérivée nulle. On créé donc une liste contenant uniquement des zéros, de taille `space_steps`"
+    "On souhaite avoir une corde au repos. On créé donc une liste contenant uniquement des zéros, de taille `space_steps`"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -196,15 +196,12 @@
   },
   {
    "source": [
-    "On peut maintenant lancer la simulation. Le lancement prend en argument obligatoire le chemin pour sauvegarder la simulation, et un tas d'options (non exhaustif):\n",
-    "* `file=True` génère un fichier texte contenant la valeur des champs à chaque instant dans un fichier, et la position en $ x $ des particules dans un autre (inutile si les particules sont fixes)\n",
-    "* `anim=True` génère une animation vidéo de la simulation\n",
-    "* `compress=True` permet de compresser le fichier .mp4 après sa création\n",
-    "* `frameskip` permet de gérer le frameskip _pour la vidéo._ Si `frameskip=1`, toutes les frames sont enregistrées dans la vidéo. Si `frameskip=n` 1 frame sur `n` seront gardées.\n",
-    "* `window_anim` permet de fenêtrer l'animation, pour se focaliser sur une zone qui nous intéresse. Si `window_anim=False` toute la corde sera représentée (équivalent à `(0.0, 1.0)`). Sinon, on met un tuple qui correspond à la fenêtre souhaitée (ex: `(0.0, 0.5)`)\n",
-    "* `yscale` permet de rescale l'axe $ y $ de la corde. Par défaut, `yscale=5.0` (zoomé fois 5) \n",
+    "On peut maintenant lancer la simulation. Le lancement prend en argument obligatoire le chemin pour sauvegarder la simulation.\n",
+    "Des fichiers textes de simulation vont être créés dans le répertoire donné en paramètre. Un fichier pour le champ, un pour la position horizontale des masselottes, un pour l'énergie de chaque cellule de la corde en fonction du temps.\n",
     "\n",
-    "Une fois la simulation terminée, la fonction `Simulation.run` renvoie le chemin des deux fichiers champ + particules (si créés)"
+    "La ligne 0 de ces fichiers correspond à une entête. Ainsi la ligne i du fichier correspond au champ au pas de temps i-1.\n",
+    "\n",
+    "Une fois la simulation terminée, la fonction `Simulation.run` renvoie le chemin des fichiers créés (champ/particles/énergie)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -228,12 +225,12 @@
     }
    ],
    "source": [
-    "field_path, _ = simu.run(mypath, anim=True, file=True, compress=False)"
+    "field_path, particles_path, energy_path = simu.run(mypath)"
    ]
   },
   {
    "source": [
-    "On peut maintenant procéder à une FFT sur les zones du champ pertinentes. Dans cet exemple, on peut faire une FFT avant la première masse, après la seconde masse, et une entre les deux. On va simplement utiliser la class `PostProcess` et sa fonction `fourier` qui va permettre de procéder à cette FFT. On lui donne en argument les fenêtres considérées "
+    "On va maintenant procéder au post processing de la simulation. On instantie une classe `PostProcess`, en donnant en argument les fichiers textes de la simulation ouverts en lecture:"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -244,14 +241,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "field_file = open(field_path, \"r\") # open the filed simulation file\n",
-    "\n",
-    "win1 = (0.0, 0.25)\n",
-    "win2 = (0.35, 0.65)\n",
-    "win3 = (0.75, 1.0)\n",
-    "\n",
-    "pp = PostProcess(field_file, log=True)\n",
-    "pp.fourier(win1, win2, win3, frameskip=20, path=mypath) # makes the fourier analysis on the windows given"
+    "process = PostProcess(\n",
+    "    open(field_path, \"r\"),\n",
+    "    open(particles_path, \"r\"),\n",
+    "    open(energy_path, \"r\"),\n",
+    ")"
+   ]
+  },
+  {
+   "source": [
+    "Grâce à la classe `PostProcess`, on peut générer:\n",
+    "* Une vidéo de la simulation, fonction `anim`\n",
+    "* Une visualisation de la simulation en 2D colormesh, fonction `plot2d`\n",
+    "* Une visualisation de la simulation en 3D colormesh, fonction `plot3d`\n",
+    "* Les déplacements $ z(t) $ des particules en fonction du temps, avec `plot_particles`\n",
+    "* Des FFT sur des portions de fenêtre, avec `fourier`"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process.anim(mypath, frameskip=5, yscale=5.0, compress=True)"
    ]
   },
   {
