--- a/example.ipynb
+++ b/example.ipynb
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "initial_field = [0.0]*space_steps\n",
-    "initial_vel_field = [0.0]*space_steps"
+    "initial_field_dt = [0.0]*space_steps"
    ]
   },
   {
@@ -141,6 +141,22 @@
     "signal_pulsation = 25.0*2.0*np.pi # [rad/s]\n",
     "edge_left = ExcitatorSin(dt, 0.01, signal_pulsation, 0.0)\n",
     "edge_right = MirrorEdge()"
+   ]
+  },
+  {
+   "source": [
+    "Pour information, on peut sommer ou multiplier les excitateurs entre eux:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_edge = edge_left*ExcitatorSin(dt, 0.01, signal_pulsation/4, 0.0)"
    ]
   },
   {
@@ -190,7 +206,7 @@
     }
    ],
    "source": [
-    "simu = Simulation(dt, time_steps, space_steps, length, density, tension, edge_left, edge_right, initial_field, initial_vel_field, particles)\n",
+    "simu = Simulation(dt, time_steps, space_steps, length, density, tension, edge_left, edge_right, initial_field, initial_field_dt, particles)\n",
     "print(simu)"
    ]
   },
