--- a/example.ipynb
+++ b/example.ipynb
@@ -1,44 +1,20 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.2 64-bit"
-  },
-  "interpreter": {
-   "hash": "eab5617646af697cc970854abaacd424487e47a225bcdad54106239d3bcc5cbd"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Two beads on a string\n",
     "\n",
     "Nous allons dans cet exemple procéder à la démonstration la plus complète de la librairie `quantum-string`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On commence par importer les librairies pertinentes"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -56,11 +32,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On définit un chemin pour la sauvegarde des simulations. On peut prendre le chemin d'accès contenant ce fichier à l'aide de `os.path` ou alors choisir n'importe quel chemin (existant)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -68,10 +44,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mypath = \"C:\\\\Users\\\\leog\\\\Desktop\\\\lg2021stage\\\\output\""
+    "mypath = \"choose\\\\your\\\\path\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On va à présent définir les quantités pertinentes pour la simulation. \n",
     "\n",
@@ -81,9 +59,7 @@
     "\n",
     "On définit la célérité $ c $, puis notre distance entre chaque point tel que $ n_x \\Delta x = L $\n",
     "puis on choisit notre $ \\Delta t $ qui doit respecter $ c = \\frac{\\Delta x}{\\Delta t} $"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -105,13 +81,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On définit les deux instants initiaux de la corde. On la représente par une liste où chaque élément correspond à la valeur du champ en la cellule considérée.\n",
     "\n",
     "On souhaite avoir une corde au repos. On créé donc une liste contenant uniquement des zéros, de taille `space_steps`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -124,13 +100,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "A présent nous allons nous occuper des conditions aux bords de la corde. Nous allons utiliser les classes prévues à cet effet de notre module.\n",
     "\n",
     "Ici, nous allons créer un exitateur sinusoïdal (`ExcitatorSin`) au bout gauche, et un mirroir parfait (`MirrorEdge`) au bord droit. Se référer à la documentation, d'autres conditions existent."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -144,11 +120,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Pour information, on peut sommer ou multiplier les excitateurs entre eux:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -160,13 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Puis nous créons les particules individuellement à l'aide de la classe `Particle`. On donne en argument la position initiale de la particule (id de la cellule), sa vitesse initiale, sa masse $ m $, sa pulsation $ \\omega = \\sqrt{\\frac{K}{m}} $, un booléen (`True`) qui indique si elle est fixée sur la corde, et le nombre total de cellules que compose la corde.\n",
     "\n",
     "Pour finir, on rassemble toutes ces particules dans un objet `Particles`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -186,11 +162,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On va maintenant initialiser la simulation avec la classe `Simulation`, en rentrant les paramètres que nous venons de définir. On oublie pas de `print` la simulation avant de la lancer, pour être sûr que tous nos paramètres nous conviennent"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -198,10 +174,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[SIMULATION]    Δt=0.00048828125s, Δx=0.0048828125m, time steps=8192, string steps (nb discretisation)=1024\n[STRING]    L=5.0m, T=1.0N, rho=0.0kg/m, c=10.0m/s ; 2 particles\n[PARTICLES]    ;0: m=0.01kg, omega=6.28rad/s;1: m=0.02kg, omega=6.28rad/s;\n"
+      "[SIMULATION]    Δt=0.00048828125s, Δx=0.0048828125m, time steps=8192, string steps (nb discretisation)=1024\n",
+      "[STRING]    L=5.0m, T=1.0N, rho=0.0kg/m, c=10.0m/s ; 2 particles\n",
+      "[PARTICLES]    ;0: m=0.01kg, omega=6.28rad/s;1: m=0.02kg, omega=6.28rad/s;\n"
      ]
     }
    ],
@@ -211,6 +189,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On peut maintenant lancer la simulation. Le lancement prend en argument obligatoire le chemin pour sauvegarder la simulation.\n",
     "Des fichiers textes de simulation vont être créés dans le répertoire donné en paramètre. Un fichier pour le champ, un pour la position horizontale des masselottes, un pour l'énergie de chaque cellule de la corde en fonction du temps.\n",
@@ -218,9 +198,7 @@
     "La ligne 0 de ces fichiers correspond à une entête. Ainsi la ligne i du fichier correspond au champ au pas de temps i-1.\n",
     "\n",
     "Une fois la simulation terminée, la fonction `Simulation.run` renvoie le chemin des fichiers créés (champ/particles/énergie)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -228,8 +206,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[SIMULATION]    Δt=0.00048828125s, Δx=0.0048828125m, time steps=8192, string steps (nb discretisation)=1024\n",
       "[STRING]    L=5.0m, T=1.0N, rho=0.0kg/m, c=10.0m/s ; 2 particles\n",
@@ -245,11 +223,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "On va maintenant procéder au post processing de la simulation. On instantie une classe `PostProcess`, en donnant en argument les fichiers textes de la simulation ouverts en lecture:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -265,6 +243,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Grâce à la classe `PostProcess`, on peut générer:\n",
     "* Une vidéo de la simulation, fonction `anim`\n",
@@ -272,9 +252,7 @@
     "* Une visualisation de la simulation en 3D colormesh, fonction `plot3d`\n",
     "* Les déplacements $ z(t) $ des particules en fonction du temps, avec `plot_particles`\n",
     "* Des FFT sur des portions de fenêtre, avec `fourier`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -286,11 +264,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Pour chaque fenêtre, on aura une animation de l'évolution de la FFT au fil du temps dans la fenêtre, et un spectrographe"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "eab5617646af697cc970854abaacd424487e47a225bcdad54106239d3bcc5cbd"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.2 64-bit",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
